# metamod-source

./: .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  AMBuildScript  README.md  appveyor.yml  configure.py  meson.build  meson_options.txt  modules.versions  product.version  pushbuild.txt
core/: AMBuilder  IPluginManager.h  ISmmAPI.h  ISmmPlugin.h  ISmmPluginExt.h  Makefile  changelog.txt  gamedll_bridge.cpp  meson.build  metamod.cpp  metamod.h  metamod_console.cpp  metamod_console.h  metamod_convar.h  metamod_convar.hxx  metamod_oslink.cpp  metamod_oslink.h  metamod_plugins.cpp  metamod_plugins.h  metamod_provider.h  metamod_util.cpp  metamod_util.h  svn_version.h  version.h  version.rc  vsp_bridge.cpp
core-1.4/: CSmmAPI.h  IPluginManager.h  ISmmAPI.h  Makefile  concommands.h  oslink.cpp  sourcemm.cpp  sourcemm.h  util.h
core-legacy/: AMBuilder  CPlugin.cpp  CPlugin.h  CSmmAPI.cpp  CSmmAPI.h  ISmmAPI.h  ISmmPlugin.h  Makefile  concommands.cpp  convar_smm.h  gamedll_bridge.cpp  oslink.h  sourcehook.cpp  sourcemm.cpp  sourcemm.h  svn_version.h  svn_version.tpl  util.cpp  util.h  version.h  version.rc  version.tpl  vsp_bridge.cpp  vsp_listener.cpp  vsp_listener.h
core/detourhook/: detourhook.cpp  detourhook.h  detourhook_impl.h
core/detourhook/asm/: asm.c
core/episode1/: convar_smm.h
core/episode1/msvc8/: sourcemm.vcproj
core/msvc10/: mm_core.sln  mm_core.vcxproj  mm_core.vcxproj.filters
core/msvc8/: sourcemm.vcproj
core/msvc9/: mm_core.sln  mm_core.vcproj  sourcemm.sln
core/provider/: console.cpp  console.h  provider_base.cpp  provider_base.h  provider_ep2.cpp  provider_ep2.h  vsp_listener.cpp  vsp_listener.h
core/provider/msvc9/: sourcemm.vcproj
core/provider/source/: provider_source.cpp  provider_source.h  provider_source_console.cpp
core/provider/source2/: provider_source2.cpp  provider_source2.h
core/sourcehook/: FastDelegate.h  sh_asm.h  sh_asm_x86_64.h  sh_list.h  sh_memfuncinfo.h  sh_memory.h  sh_pagealloc.h  sh_stack.h  sh_string.h  sh_tinyhash.h  sh_vector.h  sourcehook.cpp  sourcehook.h  sourcehook_handlers.h  sourcehook_hookmangen.cpp  sourcehook_hookmangen.h  sourcehook_hookmangen_test.cpp  sourcehook_hookmangen_test.h  sourcehook_hookmangen_x86.cpp  sourcehook_hookmangen_x86.h  sourcehook_hookmangen_x86_64.cpp  sourcehook_hookmangen_x86_64.h  sourcehook_impl.h  sourcehook_impl_chook.h  sourcehook_impl_chookidman.cpp  sourcehook_impl_chookidman.h  sourcehook_impl_chookmaninfo.cpp  sourcehook_impl_chookmaninfo.h  sourcehook_impl_ciface.h  sourcehook_impl_cleanuptask.h  sourcehook_impl_cproto.cpp  sourcehook_impl_cproto.h  sourcehook_impl_cvfnptr.cpp  sourcehook_impl_cvfnptr.h  sourcehook_pibuilder.h
core/sourcehook/generate/: generate  generate.bat  sh_memfuncinfo.h  sh_memfuncinfo.hxx  sourcehook.h  sourcehook.hxx
core/sourcehook/generate/shworker/: Makefile  fd_hopter.cpp  shworker.cpp
core/sourcehook/generate/shworker/msvc9/: shworker.sln  shworker.vcproj
core/sourcehook/test/: AMBuilder  Makefile  main.cpp  sourcehook_test.h  test.sln  test.vcproj  test2.cpp  test4.cpp  testhookmangen.cpp  testhookmangen.hxx  testmulti.cpp  testoddthunks.cpp  testrecall.cpp  testreentr.cpp  testrefret.cpp  testvphooks.cpp
core/sourcehook/test/msvc12/: test.sln  test.vcxproj  test.vcxproj.filters
core/sourcehook/test/msvc7/: test.vcproj
installer/: Attach.dof  Attach.dpr  HL2Launch.dpr  MMS_Installer.dof  MMS_Installer.dpr  MMS_Installer.res  UnitFunctions.pas  UnitInstall.pas  UnitPackSystem.pas  UnitSelectModPath.dfm  UnitSelectModPath.pas  UnitfrmMain.dfm  UnitfrmMain.pas  del.bat
loader/: AMBuilder  Makefile  gamedll.cpp  gamedll.cpp.patch  gamedll.h  loader.cpp  loader.h  loader_bridge.h  meson.build  serverplugin.cpp  serverplugin.h  utility.cpp  utility.h  valve_commandline.h  version.h  version.rc  version.tpl
loader/msvc10/: mm_loader.sln  mm_loader.vcxproj  mm_loader.vcxproj.filters
loader/msvc9/: mm_loader.sln  mm_loader.vcproj
loader/test/: AMBuilder  README.md  determinebackends1.cpp  main.cpp  test_determinebackends1.ps1  testdeterminebackends1.cpp  testutility.cpp
loader2/: AMBuilder  gamedll.cpp  gamedll.h  loader2.cpp  loader2.h  utility.cpp  utility.h
msvc10/: MMSource.sln
providers/: Makefile.ep1  provider_util.cpp  provider_util.h
public/: loader_public.h  metamod_version.h
sample_mm/: AMBuildScript  Makefile  Makefile.ep2  README.txt  configure.py  engine_wrappers.h  sample_mm.cpp  sample_mm.h  sample_mm.vdf
sourcehook/: FastDelegate.h  sh_list.h  sh_memfuncinfo.h  sh_memory.h  sh_pagealloc.h  sh_stack.h  sh_string.h  sh_tinyhash.h  sh_vector.h  smm_list.h  smm_string.h  smm_vector.h  sourcehook.cpp  sourcehook.h  sourcehook_hookmangen.cpp  sourcehook_hookmangen.h  sourcehook_hookmangen_x86.h  sourcehook_impl.h  sourcehook_impl_chook.h  sourcehook_impl_chookidman.h  sourcehook_impl_chookmancont.h  sourcehook_impl_chookmaninfo.h  sourcehook_impl_ciface.h  sourcehook_impl_cproto.h  sourcehook_impl_cvfnptr.h  sourcehook_pibuilder.h
sourcemm/: CHLTVDirector.h  CISmmAPI.h  CPlugin.cpp  CPlugin.h  CServerGameClients.h  CServerGameDLL.h  CServerGameEnts.h  CSmmAPI.cpp  CSmmAPI.h  GAMES.txt  IPluginManager.h  ISmmAPI.h  ISmmPlugin.h  ISmmPluginExt.h  LICENSE.txt  Makefile  Makefile.ep1  Makefile.ep2  SourceMM.Doxyfile  changelog.txt  concommands.cpp  concommands.h  convar.cpp  convar.h  metamod.cpp  metamod.h  metamod_console.cpp  metamod_console.h  metamod_oslink.cpp  metamod_oslink.h  metamod_plugins.cpp  metamod_plugins.h  metamod_provider.h  metamod_util.cpp  metamod_util.h  oslink.cpp  oslink.h  sourcemm.cpp  sourcemm.h  sourcemm.sln  (+7 more)
stub_mm/: Makefile  Makefile.ep1  Makefile.ep2  stub_mm.cpp  stub_mm.h  stub_mm.vdf
subprojects/: .gitignore  hl2sdk-cs2.wrap
support/: SourceMM.Doxyfile  changelog.txt  checkout-deps.ps1  checkout-deps.sh  dll2lib.ps1  metamod_linux64.vdf  metamod_osx64.vdf  metamod_win64.vdf  pushbuild.txt
update_tool/: Makefile  README.txt  api_link.asm  sourcemm_updater.conf  (+2 more)
versionlib/: AMBuildScript  meson.build  metamod_version_auto.h.in  versionlib.cpp  versionlib.h
(+232 files in other folders)
