option('sdks', type: 'array', choices: [
  'csgo',
  'hl2dm',
  'nucleardawn',
  'l4d2',
  'dods',
  'l4d',
  'css',
  'tf2',
  'insurgency',
  'sdk2013',
  'dota',
  'doi',
  'orangebox',
  'blade',
  'episode1',
  'bms',
  'pvkii',
  'mcv',
  'darkm',
  'swarm',
  'bgt',
  'eye',
  'contagion',
  'cs2',
])